# vscode-workspaces

vscode prj1/: CMakeLists.txt
vscode prj1/src/: main.cpp
vscode-prj1/inc/test1/: test1.h
vscode-prj2/: CMakeLists.txt
vscode-prj2/inc/test2/: test2.h
vscode-prj2/src/: main.cpp
vscode-prj3/: CMakeLists.txt
vscode-prj3/inc/test3/: test3.h
vscode-prj3/src/: main.cpp
